feat: add callback URL and CSRF token to timer, implement callback on execution
